infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: www.ticket-demo-yyh.xyz
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ticket-srv
                port:
                  number: 3000
          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port:
                  number: 3000
          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
